--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "xianghuawe/laravel-admin-operation-log-statistic",
   "description": "laravel admin operation log statistic",
   "type": "library",
+  "version": "1.0.0.0",
   "keywords": [
     "laravel-admin",
     "operation-log-statistic"
