--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,9 @@
     "laravel/laravel": ">=5.5",
     "phpunit/phpunit": "^9.5",
     "orchestra/testbench": "^7.0",
-    "laravel/pint": ">1.0"
+    "laravel/pint": ">1.0",
+    "phpstan/phpstan": "^1.10",
+    "nunomaduro/larastan": "^2.0"
   },
   "autoload": {
     "psr-4": {
