ci: 从缓存路径中移除vendor目录
移除vendor目录的缓存，因为Composer依赖通常不需要缓存vendor目录

--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -23,9 +23,7 @@ jobs:
       - name: Cache dependencies
         uses: actions/cache@v3
         with:
-          path:
-            - ~/.composer/cache
-            - vendor/
+          path: ~/.composer/cache
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
           restore-keys: ${{ runner.os }}-composer-
 
