chore: 更新代码质量工具配置
- 将 larastan 依赖从 nunomaduro/larastan 迁移到 larastan/larastan
- 更新 phpstan 配置文件和临时目录路径
- 添加 phpstan 到 gitignore
- 更新 pint 排除目录配置
- 优化 run-code-quality.sh 脚本输出格式
- 修复代码中的 phpstan 类型提示问题

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     "orchestra/testbench": "^7.0",
     "laravel/pint": ">1.0",
     "phpstan/phpstan": "^1.10",
-    "nunomaduro/larastan": "^2.0"
+    "larastan/larastan": "^2.11"
   },
   "autoload": {
     "psr-4": {
